# cppred

./: .gitignore  README.txt  build_unix.sh  cppred.sln
code_generation/: Blocksets.cpp  Blocksets.h  CMakeLists.txt  FreeImageInitializer.cpp  FreeImageInitializer.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Maps.cpp  Maps.h  Maps2.cpp  Maps2.h  PokemonData.cpp  PokemonData.h  ReorderedBlockset.cpp  ReorderedBlockset.h  TextStore.cpp  TextStore.h  Tilesets.cpp  Tilesets.h  Tilesets2.cpp  Tilesets2.h  Type.cpp  Type.h  Variables.cpp  Variables.h  code_generation.vcxproj  code_generation.vcxproj.filters  code_generators.h  generate_audio.cpp  generate_audio.h  generate_bitmaps.cpp  generate_charmap.cpp  generate_graphics.cpp  generate_graphics.h  generate_items.cpp  generate_items.h  generate_map_objects.cpp  generate_map_objects.h  (+17 more)
cppred/: ActualAudioRenderer.cpp  ActualAudioRenderer.h  Audio.cpp  Audio.h  AudioData.h  AudioDevice.cpp  AudioDevice.h  AudioRenderer.cpp  AudioRenderer.h  AudioScheduler.cpp  AudioScheduler.h  BgbProtocol.cpp  BgbProtocol.h  BlarggRenderer.cpp  BlarggRenderer.h  CMakeLists.txt  Cart.cpp  Cart.h  CartMbc1.cpp  CartMbc1.h  CartMbc2.cpp  CartMbc2.h  CartMbc3.cpp  CartMbc3.h  CartMbc5.cpp  CartMbc5.h  CartRomOnly.cpp  CartRomOnly.h  Console.cpp  Console.h  Coroutine.cpp  Coroutine.h  CppRed.cpp  CppRed.h  CppRedAudio.cpp  CppRedAudio.h  CppRedAudioInterface.cpp  CppRedAudioInterface.h  CppRedAudioProgram.cpp  CppRedAudioProgram.h  (+122 more)
cppred/CppRed/: Actor.cpp  Actor.h  AudioInterface.cpp  AudioInterface.h  AudioProgram.cpp  AudioProgram.h  BattleOwner.cpp  BattleOwner.h  ClearSave.h  CommonFunctions.cpp  CommonFunctions.h  CoroutineExecuter.cpp  (+44 more)
(+212 files in other folders)
